[tool.poetry]
name = "pygatttool"
version = "0.1.1"
description = "BLE client package wrapping gatttool"
authors = ["wideopentech <fossie@wideoppentech.co.uk>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
repository = "https://github.com/wideopensource/pygatttool"

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
